# anki-renderer

./: .gitignore  .npmignore  API.md  Cargo.toml  LEARNINGS.md  README.md  SESSION_LOG.md  jest.config.js  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  deploy.yml
demo/: index.html  package-lock.json  package.json  vite.config.js
demo/src/: main.js  style.css
e2e/: component.spec.ts  test.html
infra/: package-lock.json  package.json  tsconfig.json
infra/lib/: static-site-stack.ts
js/: tsconfig.json
js/src/: component.ts  index.ts  styles.ts  types.ts
js/tests/: component.test.ts  index.test.ts
scripts/: postbuild.js
src/: cloze.rs  filters.rs  lib.rs  template.rs
