[package]
name = "anki-renderer"
version = "0.1.0"
edition = "2021"
description = "Anki card template renderer compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/Gilbetrar/anki-renderer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nom = "7"
nom_locate = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
htmlescape = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
